<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <TextView
      android:id="@+id/starsLabel"
      style="@style/label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/stars_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/starsText"
      style="@style/text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/starsLabel" />

  <TextView
      android:id="@+id/descriptionLabel"
      style="@style/label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/description_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/starsText" />

  <TextView
      android:id="@+id/descriptionText"
      style="@style/text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />

  <TextView
      android:id="@+id/forksLabel"
      style="@style/label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/forks_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/descriptionText" />

  <TextView
      android:id="@+id/forksText"
      style="@style/text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/forksLabel" />

  <TextView
      android:id="@+id/urlLabel"
      style="@style/label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/url_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/forksText" />

  <TextView
      android:id="@+id/urlText"
      style="@style/text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:autoLink="web"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/urlLabel" />

  <TextView
      android:id="@+id/createdAtLabel"
      style="@style/label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/created_at_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/urlText" />

  <TextView
      android:id="@+id/createdAtText"
      style="@style/text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/createdAtLabel" />

  <TextView
      android:id="@+id/ownerLabel"
      style="@style/label"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/owner_label"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/createdAtText" />

  <TextView
      android:id="@+id/ownerText"
      style="@style/text"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toStartOf="@+id/ownerAvatar"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ownerLabel" />

  <ImageView
      android:id="@+id/ownerAvatar"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:layout_marginEnd="16dp"
      android:contentDescription="@string/owner_avatar_description"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ownerLabel" />

  <TextView
      android:id="@+id/ownerUrl"
      style="@style/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:autoLink="web"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/ownerText" />

</androidx.constraintlayout.widget.ConstraintLayout>
